--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "postgres": "^1.0.2",
     "pug": "^2.0.4",
     "wikijs": "^6.0.1"
   }
