--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.2",
     "postgres": "^1.0.2",
     "pug": "^2.0.4",
+    "serve-favicon": "^2.5.0",
     "wikijs": "^6.0.1"
   }
 }
